# openkakao-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: openkakao-cli-ci.yml  openkakao-cli-release.yml  openkakao-rs-ci.yml  openkakao-rs-release.yml
docs/research/: credential-storage.md
docs/superpowers/plans/: 2026-07-02-ax-hardening.md
docs/superpowers/specs/: 2026-07-02-ax-hardening-design.md
examples/launchd/: README.md  openkakao-watch-wrapper.sh
openkakao-cli/: Cargo.toml  IMPROVEMENT_PLAN.md  README.md  config.example.toml
openkakao-cli/src/: auth_flow.rs  local_db.rs  loco_helpers.rs  media.rs  model.rs  rest.rs  util.rs
openkakao-cli/src/commands/: auth.rs  doctor.rs  rest.rs
openkakao-cli/src/loco/: client.rs  mod.rs
openkakao-cli/tests/: auth_flow_test.rs  cli_test.rs  loco_client_test.rs  loco_crypto_test.rs  loco_packet_test.rs
openkakao-rs/: Cargo.toml
openkakao-rs/src/commands/: analytics.rs
scripts/: verify-launchd-watch.sh
src/: auth.rs  auth_flow.rs  ax_send.rs  config.rs  credentials.rs  error.rs  export.rs  lib.rs  local_db.rs  main.rs  message_db.rs  rest.rs  state.rs  util.rs
src/commands/: auth.rs  ax_read.rs  ax_watch.rs  chats.rs  download.rs  local_send.rs  members.rs  mod.rs  probe.rs  read.rs  send.rs  watch.rs
src/commands/profile/: app_state.rs  (+2 more)
src/loco/: client.rs  crypto.rs  packet.rs
tests/: message_db_test.rs
(+30 files in other folders)
