[package]
name = "openkakao-cli"
version = "1.3.0"
edition = "2021"
description = "Rust CLI client for KakaoTalk macOS cached APIs"
license = "MIT"

[[bin]]
name = "openkakao-cli"
path = "src/main.rs"

[lib]
name = "openkakao_cli"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
bson = "2.13"
byteorder = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.3"
dirs = "6.0"
hex = "0.4"
hmac = "0.12"
plist = "1.7"
rand = "0.8"
rpassword = "7"
sha1 = "0.10"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls-tls"] }
rsa = { version = "0.9", features = ["sha1"] }
rusqlite = { version = "0.33", features = ["bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.18"
thiserror = "2.0"
time = "=0.3.36"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
owo-colors = "4"
urlencoding = "2.1"
webpki-roots = "0.26"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
